# Logger

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Logger  Makefile  README.md  cmake_install.cmake
example/: main.cpp
src/: log.cpp  log.hpp
