cmake_minimum_required(VERSION 3.9)
project(Logger)
add_compile_options(-g -std=c++17 -O3)
file(GLOB_RECURSE DIR_SRC "src/*.cpp")
file(GLOB_RECURSE DIR_EXAMPLE "example/*.cpp")
find_package(fmt)
string(LENGTH "${CMAKE_SOURCE_DIR}/" SOURCE_PATH_SIZE)
add_definitions("-DSOURCE_PATH_SIZE=${SOURCE_PATH_SIZE}")
include_directories(src)
add_executable(Logger ${DIR_SRC} ${DIR_EXAMPLE})
install (TARGETS Logger DESTINATION bin)